--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1158px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -84,6 +84,12 @@ body {
   margin-left: 76px;
 }
 
+@media screen and (max-width: 768px) {
+  .header-nav-list {
+    display: none;
+  }
+}
+
 .header-item {
   margin-right: 40px;
   position: relative;
@@ -117,9 +123,18 @@ body {
   margin-left: auto;
 }
 
-.auth-nav-list {
+@media screen and (max-width: 768px) {
+  .auth-nav {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1152px) {
+  .auth-nav-list {
   display: flex;
 }
+}
+
 
 .auth-nav-item:not(:last-child) {
   margin-right: 40px;
@@ -164,19 +179,37 @@ body {
   color: var(--link-text-active-color);
 }
 
+.main-nav-button {
+  @media screen and (min-width: 769px) {
+    display: none;
+  
+  }
+
+  background-color: #ffffff;
+  border: none;
+  position: absolute;
+  right: 15px;
+}
+
+.main-nav-close {
+  display: flex;
+  stroke: #2E2F42;
+}
+
 /* hero */
+
 .hero {
   background-color: var(--hero-backround-color);
   text-align: center;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office\ 1.jpeg);
 
-  max-width: 1440px;
+  /* max-width: 768px; */
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -186,11 +219,35 @@ body {
 
 .hero-title {
   margin-top: 0;
-  margin-bottom: 48px;
-  font-size: 56px;
-  line-height: 1.07;
+  margin-bottom: 72px;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: var(--hero-text-color);
+}
+
+
+@media screen and (min-width: 1158px){
+.hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
+  max-width: 1440px;
+}
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    margin-bottom: 36px;
+    font-size: 56px;
+    line-height: 1.07;
+  
+  }
+}
+
+@media screen and (min-width: 1152px) {
+  .hero-title {
+    margin-bottom: 48px;
+  }
 }
 
 .hero-btn {
@@ -239,18 +296,25 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
 
   transform: translate(-50%, -50%) scaleY(1);
   transition: transform 300ms linear;
 
-  min-width: 408px;
+  min-width: 392px;
   min-height: 576px;
 
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 1152px){
+  .modal {
+    padding: 72px 24px 24px 24px;
+
+  }
 }
 
 .backdrop-button {
@@ -423,8 +487,16 @@ body {
 
 /* sections */
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1152px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  
 }
 
 .section.no-padding {
@@ -445,16 +517,46 @@ body {
 
 /* features */
 
-.features {
+/* .features {
   display: flex;
+} */
+
+@media screen and (min-width: 768px) {
+  .features {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
-.features-item:not(:last-child) {
-  margin-right: 24px;
+
+@media screen and (min-width: 1152px) {
+  .features-item:not(:last-child) {
+    margin-right: 24px;
+  }
 }
+
+@media screen and (max-width: 1151px) {
+  .features-item:not(:last-child) {
+    margin-bottom: 72px;
+  }
+}
+
 
 .features-item {
-  width: 264px;
+  max-width: 396px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-item {
+    max-width: 356px;
+  }
+}
+
+@media screen and (min-width: 1152px) {
+  .features-item {
+    width: 264px;
+  }
 }
 
 .features-item-link {
@@ -464,6 +566,12 @@ body {
   height: 112px;
   background-color: var(--background-color-features-item);
   margin-bottom: 8px;
+}
+
+@media screen and (max-width: 1151px){
+  .features-item-link {
+    display: none;
+  }
 }
 
 .title {
@@ -772,6 +880,9 @@ body {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
 
 .portfolio {
