--- a/css/style.css
+++ b/css/style.css
@@ -210,23 +210,37 @@ body {
 
 /* hero */
 
-.hero {
-  background-color: var(--hero-backround-color);
-  text-align: center;
-  padding-top: 112px;
-  padding-bottom: 112px;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/people-office\ 1.jpeg);
+@media screen and (max-width: 768px) {
+  .hero {
+    margin: auto;
+    padding-top: 112px;
+    padding-bottom: 112px;
+    text-align: center;
 
-  /* max-width: 768px; */
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+    background-color: var(--hero-backround-color);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/dark-bg.png)
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+
+    background-position: center;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (max-width: 768px),
+    screen and (min-resolution: 192dpi) and (max-width: 768px),
+    screen and (min-resolution: 2dppx) and (max-width: 768px) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/dark-bg-2x.jpeg);
+    }
+  }
 }
 
 .hero-title {
@@ -238,15 +252,36 @@ body {
   color: var(--hero-text-color);
 }
 
-@media screen and (min-width: 1200px) {
-  .hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
-    /* max-width: 1440px; */
-  }
-}
 
-@media screen and (min-width: 768px) {
+
+@media screen and (min-width: 769px) {
+    .hero {
+      padding-top: 112px;
+      padding-bottom: 112px;
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/tabl-bg.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100%;
+  
+      background-position: center;
+      text-align: center;
+    }
+  
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 769px),
+      screen and (min-resolution: 192dpi) and (min-width: 769px),
+      screen and (min-resolution: 2dppx) and (min-width: 769px) {
+      .hero {
+        background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)
+          ),
+          url(../images/desktop-bg-2x.png);
+      }
+    }
   .hero-title {
     margin-bottom: 36px;
     font-size: 56px;
@@ -255,10 +290,38 @@ body {
 }
 
 @media screen and (min-width: 1200px) {
+  .hero {
+      margin: auto;
+      padding-top: 188px;
+      padding-bottom: 188px;
+      text-align: center;
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/people-office\ 1.jpeg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      max-width: 1400px;
+      background-position: center;
+    }
+  
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+      screen and (min-resolution: 192dpi) and (min-width: 1200px),
+      screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+      .hero-section {
+        background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)
+          ),
+          url(../images/people-office\ 1-2x.png);
+      }
+    }
+  }
   .hero-title {
     margin-bottom: 48px;
   }
-}
+
 
 .hero-btn {
   font-family: "Roboto", sans-serif;
