--- a/css/style.css
+++ b/css/style.css
@@ -597,15 +597,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 72px 24px;
+    /* gap: 72px 24px; */
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features {
     flex-wrap: nowrap;
-
-    gap: 24px;
   }
 }
 
@@ -709,6 +707,7 @@ body {
   .worker {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 64px 24px;
   }
 }
@@ -730,8 +729,8 @@ body {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
   width: 264px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 @media screen and (max-width: 767px) {
   .worker-list:not(:last-child) {
@@ -868,14 +867,19 @@ body {
 @media screen and (min-width: 768px) {
   .container-footer {
     display: flex;
-    justify-content: center;
+    width: 552px;
+    /* justify-content: center; */
     flex-wrap: wrap;
   }
 }
 
-/* @media screen and (min-width: 1200px) {
-  margin-left: 0;
-} */
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    width: 100%;
+  }
+}
+
+
 
 @media screen and (min-width: 768px) {
   .logo {
@@ -957,9 +961,15 @@ body {
 }
 
 .footer-sub-form {
-  /* margin-left: 80px; */
   margin-top: 72px;
 }
+  @media screen and (min width: 768px) {
+    .footer-sub-form {
+    margin-left: 108px;
+    }
+
+  }
+
 
 @media screen and (min-width: 1200px) {
   .footer-sub-form {
