--- a/css/style.css
+++ b/css/style.css
@@ -597,26 +597,33 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* gap: 72px 24px; */
+    gap: 72px 24px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features {
+    gap: 0;
     flex-wrap: nowrap;
   }
 }
 
 .features-item {
   flex-basis: 100%;
+}
 
   @media screen and (min-width: 768px) {
+    .features-item {
     flex-basis: calc((100% - 24px) / 2);
   }
-  @media screen and (min-width: 1200px) {
-    width: 264px;
-  }
 }
+
+  @media screen and (min-width: 1200px) {
+    .features-item {
+    width: 264px;
+    }
+  }
+
 
 @media screen and (min-width: 1200px) {
   .features-item:not(:last-child) {
@@ -649,7 +656,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   padding-bottom: 8px;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -663,6 +670,7 @@ body {
   }
 
   @media screen and (min-width: 1200px) {
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
   }
@@ -673,8 +681,15 @@ body {
   margin-bottom: 0;
   font-size: 16px;
   line-height: 1.5;
+  font-weight: 500;
   /* or 150% */
   letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 1200px) {
+  .description {
+    font-weight: 400;
+  }
 }
 
 .features .description,
@@ -702,6 +717,8 @@ body {
 .team {
   background-color: var(--team-backround-color);
 }
+
+
 
 @media screen and (min-width: 768px) {
   .worker {
@@ -732,6 +749,15 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
 }
+
+@media screen and (max-width: 767px) {
+  .worker-list {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+}
+
 @media screen and (max-width: 767px) {
   .worker-list:not(:last-child) {
     margin-bottom: 72px;
