--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -19,6 +19,7 @@
 
   .mobile-menu-container {
     display: flex;
+    position: relative;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
